--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "hkscs_unicode_converter",
-  "version": "0.1.3",
+  "name": "hkscs_converter",
+  "version": "0.2.0",
   "description": "Convert Unicode characters to HKSCS-2016",
   "main": "index.js",
+  "files" : [
+    "index.js",
+    "mappings.js"
+  ],
   "dependencies": {
     "is-hexadecimal": "^1"
   },
@@ -11,7 +15,9 @@
     "mocha": "^7"
   },
   "scripts": {
-    "test": "mocha --reporter spec"
+    "test": "mocha --reporter spec",
+    "build" : "node build.js",
+    "prepack" : "node build.js"
   },
   "engines": {
     "node": ">=5.6.0"
@@ -20,10 +26,11 @@
     "type": "git",
     "url": "git+https://github.com/chaklim/hkscs_unicode_converter.git"
   },
-  "author": "ChakLim Wong <chaklim@gmail.com>",
+  "author": "Michael Tsang <miklcct@gmail.com>",
+  "contributors" : ["ChakLim Wong <chaklim@gmail.com>"],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/chaklim/hkscs_unicode_converter/issues"
+    "url": "https://github.com/miklcct/hkscs_unicode_converter/issues"
   },
-  "homepage": "https://github.com/chaklim/hkscs_unicode_converter#readme"
+  "homepage": "https://github.com/miklcct/hkscs_unicode_converter#readme"
 }
